--- a/PracticaBatch0/PracticaBatch0.csproj
+++ b/PracticaBatch0/PracticaBatch0.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\UserInterface.cs" />
+    <Compile Include="Utils\Sorting.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
