--- a/PracticaBatch0/App.config
+++ b/PracticaBatch0/App.config
@@ -1,18 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="PracticaBatch0.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
-    <userSettings>
-        <PracticaBatch0.Properties.Settings>
-            <setting name="SortingAlgoritm" serializeAs="String">
-                <value>LinQ</value>
-            </setting>
-        </PracticaBatch0.Properties.Settings>
-    </userSettings>
+    <appSettings>
+        <add key="SortingAlgoritm" value="LinQ" />
+    </appSettings>
 </configuration>
